<resources>
    <string name="app_name">Forza Horizon Tuner</string>
    <string name="main_menu_upgrades">Upgrades</string>
    <string name="main_menu_tune">Tune car</string>
    <string name="content_description_main_logo">Logo</string>
    <string name="diaolog_tune">In Forza Horizon 4 main characteristics: <b>Speed</b> and <b>Control</b>. Most of the opponent\'s overtaking takes place in corners, where the stability of the car is important. Therefore always:\n <b>Control</b> > <b>Speed</b>.\n\n The balance between these 2 indicators works according to the system of hidden points. You have only 10 points that you can spend, and if you put 8 points in <b>Speed</b>, in <b>Control</b> you can only invest the remaining 2.\n\n Upgrades occurs in the following order:\n <b>Conversation</b> -> <b>Aerodynamic</b> ->\n <b>Tyres</b> -> <b>Drivetrain</b> -> <b>Platform and Handling</b> -> <b>Engine</b></string>
    <string name="diaolog_nastr">Tune of the car is done after installing all the necessary racing components. Fine tuning allows you to tailor the car to your needs and desires. The following instructions are averaged in this menu. These instructions are designed to help you understand the effects of sliders.</string>
    <string name="dialog_button_prodolgit">Continue</string>
    <string name="question_for_buttons">\?</string>
    <string name="tune_preo">Conversation</string>
    <string name="tune_aero">Aero and Appearance</string>
    <string name="tune_aero_spec">Aero and\n Appearance</string>
    <string name="tune_shini">Tyres and Rims</string>
    <string name="tune_trans">Drivetrain</string>
    <string name="tune_hod_upr">Platform and Handling</string>
    <string name="tune_dvig">Engine</string>
    <string name="tune_preo1"><big><b>Engine swap</b></big></string>
    <string name="tune_preo2">\tThe engine is recommended to leave the serial. Replacement makes sense only if you switch to another class. It is not recommended to install the most powerful engine available, it may become redundant for your car. It is very important to maintain a balance between power and handling. Excessive power leads to loss of control.</string>
    <string name="tune_preo3"><big><b>Transmission swap</b></big></string>
    <string name="tune_preo4"><big><b>All-wheel drive</b></big></string>
    <string name="tune_preo5"><big><b>(Not recommended for Drift):</b></big></string>
    <string name="tune_preo6">Fast acceleration</string>
    <string name="tune_preo7">Good corner exit control</string>
    <string name="tune_preo8">Excellent cross</string>
    <string name="tune_preo9">Low top speed</string>
    <string name="tune_preo10">Inadequate handling with pressed gas</string>
    <string name="tune_preo11"><big><b>Rear drive</b></big></string>
    <string name="tune_preo12"><big><b>(Perfect for Drift):</b></big></string>
    <string name="tune_preo13">High top speed</string>
    <string name="tune_preo14">Slow acceleration</string>
    <string name="tune_preo15">Excessive throttle handling</string>
    <string name="tune_preo16"><big><b>Front-wheel drive</b></big></string>
    <string name="tune_preo17"><big><b>(Not suitable for drift):</b></big></string>
    <string name="tune_preo18">Traction is higher than that of a rear-wheel drive car</string>
    <string name="tune_preo19">Slipping possible</string>
    <string name="tune_preo20">Rotation angle limitation</string>
    <string name="tune_preo21"><b>\n\tConclusion:</b></string>
    <string name="tune_preo22"><b>- All-wheel drive</b> it is recommended for such types of races as: Dirt Racing Series, Cross Country Series, Street Scene, Road Racing Series, The Drag Strip.</string>
    <string name="tune_preo23"><b>- Rear drive</b> it is recommended for such types of races as: Street Scene, Road Racing Series, Drift, The Drag Strip.</string>
    <string name="tune_preo24"><b>- Front-wheel drive</b> not recommended for use.</string>
    <string name="tune_preo25"><big><b>Aspiration</b></big></string>
    <string name="tune_preo26">\tIf the factory engine is missing <b>Turbocharger</b> or <b>Supercharger</b>, they are not recommended for installation, the use of <b>Turbocharger</b> or <b>Supercharger</b> gives too many points of a car class:</string>
    <string name="tune_preo27"><big><b>Turbocharger</b></big></string>
    <string name="tune_preo28">High power boost</string>
    <string name="tune_preo29">There is a drop in engine speed</string>
    <string name="tune_preo30">Reduces driveability by increasing power</string>
    <string name="tune_preo31"><big><b>Supercharger</b></big></string>
    <string name="tune_preo32">No dip in engine speed</string>
    <string name="tune_preo33">Low power boost</string>
    <string name="tune_aero1">\tAppearance components should only be installed if branded or fully-equipped body kits from the <b>CONVERSATION</b> tab are present. Details from Forza Horizon are set at the discretion of the user, they do not give significant bonuses and, according to players, on most cars, they look unsuccessful.</string>
    <string name="tune_shini_disci1"><big><b>Tyre compound</b></big></string>
    <string name="tune_shini_disci2">\tThe compound of the tires depends on the type of race in which you will participate:</string>
    <string name="tune_shini_disci3">1) <b>Dirt Racing Series</b> и <b>Cross Country Series</b> - tyres for off-road racing.\n2) <b>The Drag Strip</b> - tyres for drag-racing.\n3) <b>Drift</b> - tyre racing.\n4) <b>Street Scene</b> and <b>Road Racing Series</b> - tyre racing.</string>
    <string name="tune_shini_disci4"><big><b>Front and rear tyre widths</b></big></string>
    <string name="tune_shini_disci5">1) <b>Front tyres</b> - it is recommended to establish the medium indicators of width\n2) <b>Back tyres</b> - it is recommended to establish the maximum indicators of width.</string>
    <string name="tune_shini_disci6"><big><b>Rim style</b></big></string>
    <string name="tune_shini_disci7">\tThe style of the rims does not affect anything, install as desired.</string>
    <string name="tune_shini_disci8"><big><b>Front and rear disc sizes</b></big></string>
    <string name="tune_shini_disci9">\tRims size does not affect anything, install as desired.</string>
    <string name="tune_shini_disci10"><big><b>Track width</b></big></string>
    <string name="tune_shini_disci11">\tThe distance between the front and rear wheels is always maximum, the wider the car, the greater its stability.</string>
    <string name="tune_trans1"><big><b>Clutch</b></big></string>
    <string name="tune_trans2">\tIt is recommended to set the racing level - reduces weight, reduces switching time.</string>
    <string name="tune_trans3"><big><b>Transmission</b></big></string>
    <string name="tune_trans4">\tSet racing level - unlocks gear adjustment.</string>
    <string name="tune_trans5"><big><b>Driveline</b></big></string>
    <string name="tune_trans6">\tIt is recommended that you set a racing level.</string>
    <string name="tune_trans7"><big><b>Differential</b></big></string>
    <string name="tune_trans8">\tSet racing level - unlocks differential adjustment.</string>
    <string name="tune_hod_upr1"><big><b>Brakes</b></big></string>
    <string name="tune_hod_upr2">\tSet racing level - unlocks wheel alignment.</string>
    <string name="tune_hod_upr3"><big><b>Spring and Dampers</b></big></string>
    <string name="tune_hod_upr4">\tThe type of springs and shock absorbers completely depends on the type of races in which you will participate:</string>
    <string name="tune_hod_upr5">1) <b>Dirt Racing Series</b> and <b>Cross Country Series</b> - S/D for off-road racing.\n2) <b>The Drag Strip</b> - racing springs and shock absorbers.\n3) <b>Drift</b> - S/D for drift.\n4) <b>Street Scene</b> и <b>Road Racing Series</b> - racing springs and shock absorbers.</string>
    <string name="tune_hod_upr6"><big><b>Anti-roll bars</b></big></string>
    <string name="tune_hod_upr7">\tSet racing level - unlocks front and rear cross adjustment.</string>
    <string name="tune_hod_upr8"><big><b>Chassis reinforcement/Roll cage</b></big></string>
    <string name="tune_hod_upr9">\tSet a sporting level - a racing level adds a lot of extra weight to the car.</string>
    <string name="tune_hod_upr10"><big><b>Weight reduction</b></big></string>
    <string name="tune_hod_upr11">\tIt is recommended to set a sports level - the racing level gives too many class points.\n\tIdeal weight of the car for races <b>Drift-race</b>, <b>Street spirit</b>, <b>Highway series</b> is 1000 ~ 1300 kg.</string>
    <string name="tune_dvig_text">\tInstall engine parts in the last turn, provided that their installation does not increase the class of the car, so we consume all the remaining points of the class without moving to a higher one. We install in the following order:\n1) Flywheel - racing level\n2) Intake - street level\n3) Exhaust - street level\n4) Ignition - sports level\n5) Pistons/Compression\n6) Displacement\n7) Fuel system\n8) Valves\n9) Camshaft\n10) Turbocharger/Supercharger</string>
    <string name="nastr_davlenie">Tyres</string>
    <string name="nastr_peredachi">Gearing</string>
    <string name="nastr_razval">Alignment</string>
    <string name="nastr_razval_spec">Aligment</string>
    <string name="nastr_PoperPruzhAmor">Anti-roll bars, Springs, Damping</string>
    <string name="nastr_PoperPruzhAmor_spec">Anti-roll bars,\n Springs, Damping</string>
    <string name="nastr_PoperPruzhAmor_front">Front load</string>
    <string name="nastr_PoperPruzhAmor_minPered">Minimum front</string>
    <string name="nastr_PoperPruzhAmor_maxPered">Maximum front</string>
    <string name="nastr_PoperPruzhAmor_minZad">Minimum rear</string>
    <string name="nastr_PoperPruzhAmor_maxZad">Maximum rear</string>
    <string name="nastr_PoperPruzhAmor_rezult">Result</string>
    <string name="nastr_aero">Aero</string>
    <string name="nastr_tormoza">Brakes</string>
    <string name="nastr_dif">Differential</string>
    <string name="nastr_shin_title">Tire pressure</string>
    <string name="nastr_shin2">\tThe first step is to set the average tire pressure. The pressure depends on the type of race in which you will participate and coverage which you will ride:</string>
    <string name="nastr_shin_hint">\tTire pressure significantly affects driving performance. Weak pressure leads to insufficient acceleration and insufficient maximum speed. Strong pressure results in poor stability and poor handling. It is also important to consider that at high speed, the temperature inside the wheel increases, which in turn increases the pressure by another 0.2 atmosphere.</string>
    <string name="nastr_shin_prodolg1">\tNext, you need to go to the site used in future coverage (soil or asphalt), open <b>Telemetry</b> (Button T), open the tab <b>Heat</b>, continue to accelerate, brake sharply, turn, skid and monitor the color of the tires when driving:</string>
    <string name="nastr_shin_prodolg2">Orange - tire pressure is too high, reduce.</string>
    <string name="nastr_shin_prodolg3">Blue - tire pressure is too low; increase is required.</string>
    <string name="nastr_shin_prodolg4">Reduce or increase the pressure, until the tires are white in most cases.</string>
    <string name="nastr_shin_hint_text">Choose a race type and \nclick \"Get result\"</string>
    <string name="nastr_shin_button_text">Get result</string>
    <string-array name="array_pokritie">
        <item>Choose a race type from the list</item>
        <item>Dirt Racing Series</item>
        <item>Cross Country Series</item>
        <item>Street Scene</item>
        <item>Road Racing Series</item>
        <item>Drift</item>
        <item>The Drag Strip</item>
    </string-array>
    <string name="tune_tyres_0">Choose a race type and \nclick \"Get result\"</string>
    <string name="tune_tyres_1">Front tire pressure: 1.5\nRear tire pressure: 1.5</string>
</resources>